--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 Hello World
+<script> 
+	document.cookie = "session=test GDPR"; 
+	document.cookie = "favorite_task=collect Data"; 
+	function alertCookie() 
+	{ 
+	alert(document.cookie); 
+	}
+</script>
+<body> 
+Bine ai venit la lab <button onclick="alertCookie()">Show cookies1</button>
+</body>
+
